--- a/examples/image_generation/app/src/main/res/values/themes.xml
+++ b/examples/image_generation/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ImageGeneration" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ImageGeneration" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/mp_color_primary</item>
     </style>
