--- a/examples/image_generation/app/src/main/res/layout/activity_main.xml
+++ b/examples/image_generation/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,141 +22,205 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:id="@+id/ll_initialize_section"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_output_size"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_output_size" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/edt_output_size"
+            <CheckBox
+                android:id="@+id/cbUseLora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_use_lora" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:labelFor="@id/radioDisplayOptions"
+                android:text="@string/tv_display_options" />
+
+            <RadioGroup
+                android:id="@+id/radioDisplayOptions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/radio_final"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/tv_only_display_final_image" />
+
+                <RadioButton
+                    android:id="@+id/radio_iteration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="@string/tv_display_each_iteration" />
+            </RadioGroup>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll_display_iteration"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:autofillHints="false"
-            android:hint="@string/edt_output_size"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:labelFor="@id/tv_output_size"
-            android:minWidth="60dp"
-            android:textColor="@color/text_color" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_display" />
+
+            <EditText
+                android:id="@+id/edt_display_iteration"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:hint="@string/edt_display"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_color" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_iterations" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--face/depth/edge plugins-->
+            <Spinner
+                android:id="@+id/spinner_plugins"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:spinnerMode="dropdown" />
+
+            <Button
+                android:id="@+id/btn_open_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_load_picture" />
+
+            <Button
+                android:id="@+id/btn_open_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_open_camera" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <Button
+            android:id="@+id/btn_initialize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/btn_initialize" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
+        android:id="@+id/ll_generate_section"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_above="@+id/btn_reset"
+        android:layout_below="@+id/ll_initialize_section"
+        android:orientation="vertical">
 
-        <TextView
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_prompt" />
+
+            <EditText
+                android:id="@+id/edt_prompt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:hint="@string/tv_prompt_hint"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                android:labelFor="@id/tv_prompt"
+                android:lines="4"
+                android:textColor="@color/text_color" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_display" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/edt_display_iteration"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:hint="@string/edt_display"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:minWidth="48dp"
-            android:textAlignment="textEnd"
-            android:textColor="@color/text_color" />
+            <TextView
+                android:id="@+id/tv_iterations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_iterations_upper" />
 
-        <TextView
-            android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/edt_iterations"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="@string/edt_iterations_hint"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:labelFor="@id/tv_iterations"
+                android:minWidth="48dp"
+                android:textAlignment="center"
+                android:textColor="@color/text_color" />
+
+            <TextView
+                android:id="@+id/tv_seed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@string/tv_seed" />
+
+            <EditText
+                android:id="@+id/edt_seed"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="@string/edt_seed_hint"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:labelFor="@id/tv_seed"
+                android:minWidth="48dp"
+                android:textAlignment="center"
+                android:textColor="@color/text_color" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <Button
+            android:id="@+id/btn_generate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tv_iterations" />
+            android:layout_gravity="center_horizontal"
+            android:text="@string/btn_generate" />
+
+        <ImageView
+            android:id="@+id/imgOutput"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@null"
+            android:scaleType="center" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <Button
-        android:id="@+id/btn_initialize"
+        android:id="@+id/btn_reset"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/btn_initialize" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_prompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_prompt" />
-
-        <EditText
-            android:id="@+id/edt_prompt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:hint="@string/tv_prompt_hint"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine"
-            android:labelFor="@id/tv_prompt"
-            android:lines="5"
-            android:textColor="@color/text_color" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_iterations"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_iterations_upper" />
-
-        <EditText
-            android:id="@+id/edt_iterations"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="@string/edt_iterations_hint"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:labelFor="@id/tv_iterations"
-            android:minWidth="48dp"
-            android:textAlignment="center"
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/tv_seed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/tv_seed" />
-
-        <EditText
-            android:id="@+id/edt_seed"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:hint="@string/edt_seed_hint"
-            android:importantForAutofill="no"
-            android:inputType="number"
-            android:labelFor="@id/tv_seed"
-            android:minWidth="48dp"
-            android:textAlignment="center"
-            android:textColor="@color/text_color" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <Button
-        android:id="@+id/btn_generate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/btn_generate" />
-
-    <ImageView
-        android:id="@+id/imgOutput"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@null"
-        android:scaleType="center" />
-</androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/tv_reset" />
+</RelativeLayout>
