--- a/examples/image_generation/android/app/src/main/res/layout/activity_diffusion.xml
+++ b/examples/image_generation/android/app/src/main/res/layout/activity_diffusion.xml
@@ -60,34 +60,6 @@
             </RadioGroup>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/ll_display_iteration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_display" />
-
-            <EditText
-                android:id="@+id/edt_display_iteration"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:hint="@string/edt_display"
-                android:importantForAutofill="no"
-                android:inputType="number"
-                android:minWidth="48dp"
-                android:textAlignment="textEnd"
-                android:textColor="@color/text_color" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_iterations" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
         <Button
             android:id="@+id/btn_initialize"
             android:layout_width="match_parent"
@@ -168,6 +140,40 @@
                 android:minWidth="48dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color" />
+
+            <Button
+                android:id="@+id/btn_seed_random"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_seed_randomize" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll_display_iteration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_display" />
+
+            <EditText
+                android:id="@+id/edt_display_iteration"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:hint="@string/edt_display"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_color" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_iterations" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <Button
@@ -181,8 +187,8 @@
             android:id="@+id/imgOutput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@null"
-            android:scaleType="center" />
+            android:adjustViewBounds="true"
+            android:contentDescription="@null" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 </RelativeLayout>
