--- a/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
+++ b/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
@@ -60,58 +60,6 @@
             </RadioGroup>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/ll_display_iteration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_display" />
-
-            <EditText
-                android:id="@+id/edt_display_iteration"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:hint="@string/edt_display"
-                android:importantForAutofill="no"
-                android:inputType="number"
-                android:minWidth="48dp"
-                android:textAlignment="textEnd"
-                android:textColor="@color/text_color" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_iterations" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!--face/depth/edge plugins-->
-            <Spinner
-                android:id="@+id/spinner_plugins"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:spinnerMode="dropdown" />
-
-            <Button
-                android:id="@+id/btn_open_gallery"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_load_picture" />
-
-            <Button
-                android:id="@+id/btn_open_camera"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tv_open_camera" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
         <Button
             android:id="@+id/btn_initialize"
             android:layout_width="match_parent"
@@ -192,6 +140,65 @@
                 android:minWidth="48dp"
                 android:textAlignment="center"
                 android:textColor="@color/text_color" />
+
+            <Button
+                android:id="@+id/btn_seed_random"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_seed_randomize" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!--face/depth/edge plugins-->
+            <Spinner
+                android:id="@+id/spinner_plugins"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:spinnerMode="dropdown" />
+
+            <Button
+                android:id="@+id/btn_open_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_load_picture" />
+
+            <Button
+                android:id="@+id/btn_open_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_open_camera" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ll_display_iteration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_display" />
+
+            <EditText
+                android:id="@+id/edt_display_iteration"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:hint="@string/edt_display"
+                android:importantForAutofill="no"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:textAlignment="textEnd"
+                android:textColor="@color/text_color" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_iterations" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <Button
@@ -201,20 +208,38 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/btn_generate" />
 
-        <ImageView
-            android:id="@+id/imgDisplayInput"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="@null"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="fitXY" />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <ImageView
+                android:id="@+id/imgDisplayInput"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:contentDescription="@null"
+                android:scaleType="centerInside" />
+
+            <ImageView
+                android:id="@+id/imgConditionImage"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:contentDescription="@null"
+                android:scaleType="centerInside" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <ImageView
             android:id="@+id/imgOutput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@null"
-            android:scaleType="center" />
+            android:adjustViewBounds="true"
+            android:contentDescription="@null" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
