changes for testing gallery crash on earlier devices

--- a/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
+++ b/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
@@ -60,6 +60,25 @@
             </RadioGroup>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@string/tv_plugin_type_label" />
+
+            <!--face/depth/edge plugins-->
+            <Spinner
+                android:id="@+id/spinner_plugins"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:spinnerMode="dropdown" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
         <Button
             android:id="@+id/btn_initialize"
             android:layout_width="match_parent"
@@ -152,13 +171,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <!--face/depth/edge plugins-->
-            <Spinner
-                android:id="@+id/spinner_plugins"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:spinnerMode="dropdown" />
 
             <Button
                 android:id="@+id/btn_open_gallery"
