fixed bugs, added legal disclaimers

--- a/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
+++ b/examples/image_generation/android/app/src/main/res/layout/activity_plugin.xml
@@ -253,5 +253,12 @@
             android:adjustViewBounds="true"
             android:contentDescription="@null" />
 
+        <TextView
+            android:id="@+id/tvDisclaimer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:text="@string/legal_disclaimer" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
