--- a/examples/gesture_recognizer/android/app/src/main/res/color/bg_nav_item.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/color/bg_nav_item.xml
@@ -15,6 +15,6 @@
     ~ limitations under the License.
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/mp_color_primary" android:state_checked="true" />
-    <item android:color="@android:color/darker_gray" />
+    <item android:color="@color/htwGreen" android:state_checked="true" />
+    <item android:color="@color/htwGrey" />
 </selector>
