--- a/examples/gesture_recognizer/android/app/src/main/res/values/themes.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/values/themes.xml
@@ -17,15 +17,15 @@
     <!-- Base application theme. -->
     <style name="Theme.GestureRecognizer" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/mp_color_primary</item>
-        <item name="colorPrimaryVariant">@color/mp_color_primary_variant</item>
-        <item name="colorPrimaryDark">@color/mp_color_primary_dark</item>
+        <item name="colorPrimary">@color/htwGreen</item>
+        <item name="colorPrimaryVariant">@color/htwBlue</item>
+        <item name="colorPrimaryDark">@color/htwGreen</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/mp_color_secondary</item>
         <item name="colorSecondaryVariant">@color/mp_color_secondary_variant</item>
         <item name="colorError">@color/mp_color_error</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:statusBarColor">@color/htwGreen</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
