--- a/examples/gesture_recognizer/android/app/src/main/res/layout/activity_main.xml
+++ b/examples/gesture_recognizer/android/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
     android:background="@android:color/transparent">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -37,7 +38,7 @@
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"
             tools:context=".MainActivity" />
-
+        <!--
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -51,8 +52,9 @@
                 android:src="@drawable/ge_logo"
                 android:layout_gravity="center"/>
         </androidx.appcompat.widget.Toolbar>
-
+        -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
+
             android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -64,7 +66,7 @@
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0dp"
             android:layout_below="@id/navigation"
             android:background="@color/icActive" />
     </RelativeLayout>
